--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "to-do-list",
+  "jest": {
+    "verbose": true
+  },
   "version": "1.0.0",
   "description": "Todo list",
   "main": "index.js",
@@ -44,6 +47,7 @@
   },
   "dependencies": {
     "gh-pages": "^4.0.0",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
